# pxlot

./: .env.example  AI_AGENT_DESIGN.md  Cargo.toml  FEATURES.md  HISTORY_REDESIGN.md  Pixel_art_editor_requirements.md  README.md  TODO.md  Trunk.toml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: deploy.yml
app/: Cargo.toml  index.html  manifest.json  sw.js
app/src/: auth.rs  i18n.rs  main.rs  project_api.rs  project_store.rs  state.rs  storage.rs
app/src/ai/: agent.rs  api_client.rs  image_gen.rs  message.rs  mod.rs  tools.rs
app/src/components/: ai_chat.rs  ai_panel.rs  canvas_view.rs  color_picker.rs  gallery.rs  layer_panel.rs  login.rs  mod.rs  project_list.rs  project_list_page.rs  timeline.rs  tool_panel.rs
crates/animation/: Cargo.toml
crates/animation/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: dirty_region.rs  history.rs  image_processing.rs  lib.rs
crates/formats/: Cargo.toml
crates/formats/src/: gif_format.rs  lib.rs  png_format.rs  svg_format.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/wasm_bridge/: Cargo.toml
crates/wasm_bridge/src/: lib.rs
server/: Cargo.toml
server/migrations/: 001_create_users.sql  002_create_projects.sql  003_add_gallery_fields.sql  004_add_frame_thumbnails.sql
server/src/: auth.rs  db.rs  main.rs  routes.rs
styles/: main.css
