[workspace]
resolver = "2"
members = [
    "app",
    "server",
    "crates/core",
    "crates/tools",
    "crates/formats",
    "crates/animation",
    "crates/renderer",
    "crates/wasm_bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Internal crates
pxlot-core = { path = "crates/core" }
pxlot-tools = { path = "crates/tools" }
pxlot-formats = { path = "crates/formats" }
pxlot-animation = { path = "crates/animation" }
pxlot-renderer = { path = "crates/renderer" }
pxlot-wasm-bridge = { path = "crates/wasm_bridge" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
