[package]
name = "pxlot-app"
version.workspace = true
edition.workspace = true

[dependencies]
pxlot-core = { workspace = true }
pxlot-tools = { workspace = true }
pxlot-formats = { workspace = true }
pxlot-animation = { workspace = true }
pxlot-renderer = { workspace = true }
pxlot-wasm-bridge = { workspace = true }
leptos = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { workspace = true, features = [
    "Blob",
    "BlobPropertyBag",
    "CanvasRenderingContext2d",
    "Document",
    "DomRect",
    "Element",
    "File",
    "FileList",
    "FileReader",
    "HtmlAnchorElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "DomStringList",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "KeyboardEvent",
    "Navigator",
    "Storage",
    "Url",
    "Window",
    "MouseEvent",
    "WheelEvent",
    "HtmlElement",
    "ImageData",
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "AddEventListenerOptions",
] }
base64 = "0.22"
png = "0.17"
js-sys = { workspace = true }
log = { workspace = true }
console_log = { workspace = true }
console_error_panic_hook = { workspace = true }
