[package]
name = "pxlot-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
