[package]
name = "pxlot-renderer"
version.workspace = true
edition.workspace = true

[dependencies]
pxlot-core = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlBuffer",
    "WebGlUniformLocation",
] }
js-sys = { workspace = true }
log = { workspace = true }
